--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react_square",
+  "name": "react_adventure",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "homepage": "http://simple-sifu.github.io/react_square",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config=webpack.config.prod.js",
+    "build-prod": "webpack --config=webpack.config.prod.js",
     "build-dev": "webpack --config=webpack.config.dev.js",
     "start": "webpack serve --config=webpack.config.dev.js --open"
   },
