--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.3",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
     "mini-css-extract-plugin": "^1.6.2",
