--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^3.11.3"
