--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "terser-webpack-plugin": "^4.2.3",
     "webpack-merge": "^5.8.0"
   },
