--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack-merge": "^5.8.0"
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.0",
     "eslint": "^8.11.0",
     "eslint-plugin-react": "^7.29.3",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^1.6.2",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "2.5.1",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
-    "webpack": "^5.28.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.8.1",
+    "webpack-merge": "^5.8.0"
   }
 }
